--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ Bot/configs/bot_token.json
 package-lock.json
 src/main/resources/application-dev.properties
 src/main/resources/application-prod.properties
+src/main/resources/security-config.yml
 src/test/resources/application-test.properties
 frontend/generated/**
 vite.generated.ts
