--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.profiles.active=@spring.profiles.active@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 logging.level.root = INFO
+spring.flyway.enabled=false
 #logging.level.com.ardaslegends.data.service = DEBUG
 #logging.level.com.ardaslegends.data.presentation = DEBUG
-
 
 spring.datasource.hikari.auto-commit=false
 
